--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-PROJET-C | CSII1i
+PROJET-C# | CSII1i
 Ce projet est un générateur de MCD et MLD à partir d'un dictionnaire des données et d'une matrice des dépendances fonctionnelles.
 Ce projet est réalisé dans le cadre d'une première année de cycle ingénieurie à l'école de l'EPSI Lyon.
 L'équipe de travail se compose de 4 personnes : Alexandre Mérignac, Alexandre Vallet, ..., ...
-L'application est développé en langage C#.
